--- a/README
+++ b/README
@@ -1,21 +1,34 @@
-Chess
+# Chess!
 
-Features
-1. 2 people can play chess against each other
-2. All possible moves for each piece is shown when the piece is clicked
-3. If your side is in check, only moves that stop the check are shown
-4. When there are no such moves from #3, checkmate is declared
-5. When there are no possible moves but the king is not in check, stalemete is declared
-6. Supports special moves like casle, en passant, and promotion (only promotion to Queen is supported. Unable to promote pawn to rook, knight, or bishop. Support for different promotions coming soon)
+A full Chess application that allows 2 players to play chess against each other
 
-Color Guide
+
+## Features
+
+ - 2 players can play against each other
+ - All possible moves for each piece is shown when the piece is clicked
+ - If your side is in check, only moves that stop the check are shown
+ - When there are no such moves from #3, checkmate is declared
+ - When there are no possible moves but the king is not in check, stalemate is declared
+ - Supports special moves like castle, en passant, and promotion (only promotion to Queen is supported. Unable to promote pawn to rook, knight, or bishop. Support for different promotions coming soon)
+
+## Color Guide
+
+When you click on a piece, you will see several different colors depending on what kind of move the piece can make
+
 Blue = Move
 Red = Kill
 Green = Castle
 Purple = Promotion
 
-En Passant note: When an en passant is possible, the tile above the pawn to be killed will turn red. Click that red tile to perform the en passant. Clicking on the pawn to be killed direclty will not kill the pawn
+## Skills
 
-Click the link below to download the program and play yourself
+ - C#
+ - Data Structures
+	 - Dictionary
+	 - Data Table
+ - User Interface Design
 
-https://www.dropbox.com/s/1j6lcwivtjco2kr/Chess.zip?dl=0
+## Improvements
+
+I want to learn and implement and Chess AI so that a player can play against a CPU.
